--- a/Proctor-prototype/demo/proctoring-app/package.json
+++ b/Proctor-prototype/demo/proctoring-app/package.json
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mediapipe/face_mesh": "^0.4.1633559619",
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow/tfjs": "^1.7.4",
     "@vladmandic/face-api": "^1.7.13",
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
     "face-api.js": "^0.22.2",
+    "socket.io-client": "^4.7.5",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5"
   },
