--- a/Proctor-prototype/demo/proctoring-app/package.json
+++ b/Proctor-prototype/demo/proctoring-app/package.json
@@ -14,6 +14,7 @@
     "@vladmandic/face-api": "^1.7.13",
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.11",
     "face-api.js": "^0.22.2",
     "socket.io-client": "^4.7.5",
     "vue": "^3.2.13",
